Student update and improvement of doubt UI

--- a/client/src/pages/Landingpage.css
+++ b/client/src/pages/Landingpage.css
@@ -2,13 +2,13 @@
   min-height: 93vh;
   display: flex;
   align-items: center;
-  background-image: url(../../public/background.jpg);
+  background-image: url(../../public/doubtsolving1.webp);
   background-position: center;
   background-size: cover;
 }
 
 .title {
-  font-size: 95px;
+  font-size: 68px;
 }
 
 .subtitle {
